--- a/main.html
+++ b/main.html
@@ -2,18 +2,77 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Shaw's News</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      margin: 0;
+      background-color: #f5f5f5;
+      font-family: Arial, sans-serif;
+    }
+
+    .header {
+      background-color: #011e29;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      font-size: 24px;
+    }
+
+    .container {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin: 30px auto;
+      width: 90%;
+      max-width: 1000px;
+    }
+
+    .latest-news-section,
+    .main-article,
+    .pictorial-news-section {
+      background-color: white;
+      padding: 20px;
+      border-radius: 10px;
+    }
+
+    .latest-news-section {
+      width: 20%;
+    }
+
+    .main-article {
+      width: 50%;
+      text-align: center;
+    }
+
+    .pictorial-news-section {
+      width: 25%;
+      text-align: center;
+    }
+
+    .pictorial-news-section img {
+      width: 100%;
+      margin-bottom: 10px;
+      border-radius: 5px;
+    }
+
+    ul {
+      list-style-type: disc;
+      padding-left: 20px;
+    }
+
+    li {
+      margin-bottom: 10px;
+    }
+  </style>
 </head>
 <body>
 
   <header class="header">
-    <h1>Shaw's News</h1>
+    Shaw's News
   </header>
 
   <div class="container">
-    
+    <!-- Latest News -->
     <div class="latest-news-section">
       <h3>Latest News Articles</h3>
       <ul>
@@ -23,6 +82,7 @@
       </ul>
     </div>
 
+    <!-- Main Article -->
     <div class="main-article">
       <h2>Main Article</h2>
       <p>
@@ -32,13 +92,13 @@
       </p>
     </div>
 
+    <!-- Pictorial News -->
     <div class="pictorial-news-section">
       <h3>Pictorial News</h3>
-      <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="News 1">
-      <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="News 2">
-      <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="News 3">
+      <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="News Image 1">
+      <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="News Image 2">
+      <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="News Image 3">
     </div>
-
   </div>
 
 </body>
